--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -1,54 +1,53 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-  "http://www.w3.org/TR/html4/loose.dtd">
+        "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>Jasmine Spec Runner</title>
+    <title>Jasmine Spec Runner</title>
+    <link rel="stylesheet" type="text/css" href="libraries/jasmine-1.3.0/jasmine.css">
+    <script type="text/javascript" src="libraries/jasmine-1.3.0/jasmine.js"></script>
+    <script type="text/javascript" src="libraries/jasmine-1.3.0/jasmine-html.js"></script>
+    <script type="text/javascript" src="libraries/phantom-jasmine/console-runner.js"></script>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.3.0/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.0/jasmine.css">
-  <script type="text/javascript" src="libraries/jasmine-1.3.0/jasmine.js"></script>
-  <script type="text/javascript" src="libraries/jasmine-1.3.0/jasmine-html.js"></script>
-  <script type="text/javascript" src="libraries/phantom-jasmine/console-runner.js"></script>
+    <!-- include source files here... -->
+    <script type="text/javascript" src="HelloWorld.js"></script>
+    {% include 'index_statics.html' %}
 
-  <!-- include source files here... -->
-  <script type="text/javascript" src="HelloWorld.js"></script>
+    <!-- include spec files here... -->
+    <script type="text/javascript" src="spec/SpecHelper.js"></script>
+    <script type="text/javascript" src="spec/HelloWorldSpec.js"></script>
 
-  <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="spec/HelloWorldSpec.js"></script>
+    <script type="text/javascript">
+        (function () {
+            var jasmineEnv = jasmine.getEnv();
+            jasmineEnv.updateInterval = 1000;
 
-  <script type="text/javascript">
-    (function() {
-      var jasmineEnv = jasmine.getEnv();
-      jasmineEnv.updateInterval = 1000;
+            var htmlReporter = new jasmine.HtmlReporter();
 
-      var htmlReporter = new jasmine.HtmlReporter();
+            jasmineEnv.addReporter(htmlReporter);
 
-      jasmineEnv.addReporter(htmlReporter);
+            //phantom-jasmine console reporter
+            var console_reporter = new jasmine.ConsoleReporter();
+            jasmine.getEnv().addReporter(console_reporter);
 
-      //phantom-jasmine console reporter
-      var console_reporter = new jasmine.ConsoleReporter();
-      jasmine.getEnv().addReporter(console_reporter);
+            jasmineEnv.specFilter = function (spec) {
+                return htmlReporter.specFilter(spec);
+            };
 
-      jasmineEnv.specFilter = function(spec) {
-        return htmlReporter.specFilter(spec);
-      };
+            var currentWindowOnload = window.onload;
 
-      var currentWindowOnload = window.onload;
+            window.onload = function () {
+                if (currentWindowOnload) {
+                    currentWindowOnload();
+                }
+                execJasmine();
+            };
 
-      window.onload = function() {
-        if (currentWindowOnload) {
-          currentWindowOnload();
-        }
-        execJasmine();
-      };
-      
-      function execJasmine() {
-        jasmineEnv.execute();
-      }
+            function execJasmine() {
+                jasmineEnv.execute();
+            }
 
-    })();
-  </script>
+        })();
+    </script>
 </head>
 <body>
 </body>
