[nim] Wrote our first ever web client test

--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -10,11 +10,12 @@
 
     <!-- include source files here... -->
     <script type="text/javascript" src="HelloWorld.js"></script>
-    {% include 'index_statics.html' %}
+    <script type="text/javascript" src="models/series.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/SpecHelper.js"></script>
     <script type="text/javascript" src="spec/HelloWorldSpec.js"></script>
+    <script type="text/javascript" src="spec/series_spec.js"></script>
 
     <script type="text/javascript">
         (function () {
