[nim] through-api creation of series in visualisation.createNewSeries() is now tested. Using promises and jasmine-node-like done() callback for testing the asynchronous code

--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -9,13 +9,15 @@
     <script type="text/javascript" src="libraries/phantom-jasmine/console-runner.js"></script>
 
     <!-- include source files here... -->
-    <script type="text/javascript" src="HelloWorld.js"></script>
     <script type="text/javascript" src="models/series.js"></script>
+    <script type="text/javascript" src="models/visualisation.js"></script>
+    <script type="text/javascript" src="libraries/rsvp.js"></script>
+    <script type="text/javascript" src="spec/specUtils.js"></script>
+    <script type="text/javascript" src="libraries/d3.min.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="spec/SpecHelper.js"></script>
-    <script type="text/javascript" src="spec/HelloWorldSpec.js"></script>
     <script type="text/javascript" src="spec/series_spec.js"></script>
+    <script type="text/javascript" src="spec/visualisation_spec.js"></script>
 
     <script type="text/javascript">
         (function () {
