--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -10,6 +10,7 @@
 
     <!-- include source files here... -->
     <script type="text/javascript" src="models/series.js"></script>
+    <script type="text/javascript" src="sim_api.js"></script>
     <script type="text/javascript" src="models/visualisation.js"></script>
     <script type="text/javascript" src="libraries/rsvp.js"></script>
     <script type="text/javascript" src="spec/specUtils.js"></script>
@@ -17,7 +18,7 @@
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/series_spec.js"></script>
-    <script type="text/javascript" src="spec/visualisation_spec.js"></script>
+    <script type="text/javascript" src="spec/sim_api.js"></script>
 
     <script type="text/javascript">
         (function () {
