[nim] Addition of series to visualisation object is now tested and promisified

--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -18,7 +18,8 @@
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/series_spec.js"></script>
-    <script type="text/javascript" src="spec/sim_api.js"></script>
+    <script type="text/javascript" src="spec/sim_api_spec.js"></script>
+    <script type="text/javascript" src="spec/visualisation_spec.js"></script>
 
     <script type="text/javascript">
         (function () {
