[nim] Attaching console_reporter to the window object so phantom-jasmine runner can see it and complete green test runs with exit status 0

--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -33,7 +33,7 @@
             jasmineEnv.addReporter(htmlReporter);
 
             //phantom-jasmine console reporter
-            var console_reporter = new jasmine.ConsoleReporter();
+            window.console_reporter = new jasmine.ConsoleReporter();
             jasmine.getEnv().addReporter(console_reporter);
 
             jasmineEnv.specFilter = function (spec) {
