[nim] Testing logic in index.js. Mocking dom elements

--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -14,14 +14,17 @@
     <script type="text/javascript" src="sim_api.js"></script>
     <script type="text/javascript" src="models/visualisation.js"></script>
     <script type="text/javascript" src="libraries/rsvp.js"></script>
-    <script type="text/javascript" src="spec/specUtils.js"></script>
     <script type="text/javascript" src="libraries/d3.min.js"></script>
+    <script type="text/javascript" src="libraries/jquery.1.10.2.min.js"></script>
+    <script type="text/javascript" src="spec/specUtils.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/series_spec.js"></script>
     <script type="text/javascript" src="spec/sim_api_spec.js"></script>
     <script type="text/javascript" src="spec/visualisation_spec.js"></script>
     <script type="text/javascript" src="spec/session_spec.js"></script>
+    <script type="text/javascript" src="spec/index_spec.js"></script>
 
     <script type="text/javascript">
         (function () {
