--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="libraries/jquery.1.10.2.min.js"></script>
     <script type="text/javascript" src="spec/specUtils.js"></script>
     <script type="text/javascript" src="series_controls.js"></script>
+    <script type="text/javascript" src="visualisation_controls.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="insertables.js"></script>
 
