[nim] Extracted some visualisation control and series control specs out of index spec

--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -29,6 +29,8 @@
     <script type="text/javascript" src="spec/visualisation_spec.js"></script>
     <script type="text/javascript" src="spec/session_spec.js"></script>
     <script type="text/javascript" src="spec/index_spec.js"></script>
+    <script type="text/javascript" src="spec/series_controls_spec.js"></script>
+    <script type="text/javascript" src="spec/visualisation_controls_spec.js"></script>
 
     <script type="text/javascript">
         (function () {
