[nim] Remamed index_spec to sim_controls_spec to reflect recent refactoring in production code

--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="spec/sim_api_spec.js"></script>
     <script type="text/javascript" src="spec/visualisation_spec.js"></script>
     <script type="text/javascript" src="spec/session_spec.js"></script>
-    <script type="text/javascript" src="spec/index_spec.js"></script>
+    <script type="text/javascript" src="spec/sim_object_controls_spec.js"></script>
     <script type="text/javascript" src="spec/series_controls_spec.js"></script>
     <script type="text/javascript" src="spec/visualisation_controls_spec.js"></script>
 
