--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="models/session.js"></script>
     <script type="text/javascript" src="sim_api.js"></script>
     <script type="text/javascript" src="models/visualisation.js"></script>
+    <script type="text/javascript" src="models/simulation.js"></script>
     <script type="text/javascript" src="libraries/rsvp.js"></script>
     <script type="text/javascript" src="libraries/d3.min.js"></script>
     <script type="text/javascript" src="libraries/jquery.1.10.2.min.js"></script>
@@ -31,6 +32,7 @@
     <script type="text/javascript" src="spec/sim_object_controls_spec.js"></script>
     <script type="text/javascript" src="spec/series_controls_spec.js"></script>
     <script type="text/javascript" src="spec/visualisation_controls_spec.js"></script>
+    <script type="text/javascript" src="spec/simulation_spec.js"></script>
 
     <script type="text/javascript">
         (function () {
