[nim] Session can now find the visualisation a series belongs to. Useful in knowing what visualisation to render a particular series data to

--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="libraries/d3.min.js"></script>
     <script type="text/javascript" src="libraries/jquery.1.10.2.min.js"></script>
     <script type="text/javascript" src="spec/specUtils.js"></script>
+    <script type="text/javascript" src="spec/spec_helpers.js"></script>
     <script type="text/javascript" src="series_controls.js"></script>
     <script type="text/javascript" src="visualisation_controls.js"></script>
     <script type="text/javascript" src="sim_object_controls.js"></script>
