--- a/app/static/js/SpecRunner.html
+++ b/app/static/js/SpecRunner.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="libraries/phantom-jasmine/console-runner.js"></script>
 
     <!-- include source files here... -->
+    <script type="text/javascript" src="config.js"></script>
     <script type="text/javascript" src="models/series.js"></script>
     <script type="text/javascript" src="models/session.js"></script>
     <script type="text/javascript" src="sim_api.js"></script>
